fix: added a minimum height to the map so it is usable on mobile landscape

--- a/IpAddrTracker/app/scss/_modules.scss
+++ b/IpAddrTracker/app/scss/_modules.scss
@@ -109,6 +109,7 @@
 
 .map {
   width: 100%;
+  min-height: rem(600px);
   z-index: 0;
 }
 
